metadataPackage_1670931275320/objects/Irrigation_Alert__e.object
<CustomObject>
    <label>Irrigation Alert</label>
    <pluralLabel>Irrigation Alerts</pluralLabel>
    <fields>
        <fullName>Alert_Text__c</fullName>
        <label>Alert Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceeds_Acceptable_Overrides__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceeds Acceptable Overrides</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Id__c</fullName>
        <label>Field Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>